--- a/src/components/lang/en-US.json
+++ b/src/components/lang/en-US.json
@@ -12,9 +12,9 @@
     "hero.created": "This portfolio was created with React",
 
     "aboutme.title": "About me",
-    "aboutme.description1": "As a Front-End Developer, I turn ideas into code, i have had to chance to participate in several projects like Information, Financial, Audiovisual, Dashboards and Workflow Websites, i have worked some libraries like BPMN.js, Chart.js, Heatmap.js and Frameworks/Libraries as Angular, React and VCL. I am to able to make attractive, interactive, useful and professional websites.",
-    "aboutme.description2": "I'm constantly learning, in this moment I'm improving my React and English skills.",
-    "aboutme.description3": "In my free time, i love to running over the mountains, go to the gym and try to keep a healthy lifestyle. I have two pets, Amatista (dog) and Frida (cat), they are very affectionate.",
+    "aboutme.description1": "As a Front-End Developer, I love to turn ideas into code also i have had to chance to participate in several websites projects like Informative, Financial, Audiovisual, Dashboards and Workflow. In my challenges, i have worked some libraries like BPMN.js, Chart.js, Heatmap.js and Frameworks/Libraries as Angular, React and VCL and this makes me able to build attractive, interactive, useful and professional websites.",
+    "aboutme.description2": "Always I’m looking to grow and my skills in React, Angular, Javascript, Typescript and English",
+    "aboutme.description3": "In my free time, i love to running over the mountains, go to the gym and try to keep a healthy lifestyle and disconnect from everything for a few moments.",
     "aboutme.english": "English level (A2/B1)",
 
     "projects.title": "My projects",
